# drive-thru-voice-agent

./: Makefile  README.md
backend/server/: .env.example  .gitignore  README.md  pyproject.toml
backend/server/src/server/: app.py  db.py  deps.py  models.py  security.py  settings.py
backend/server/src/server/parsing/: extract.py  parser.py  providers.py
backend/server/src/server/routers/: agent_configs.py  auth.py  branches.py  connection.py  documents.py  menu.py  parser_config.py  sessions.py  users.py
backend/server/src/server/schemas/: agent_config.py  auth.py  branch.py  document.py  menu.py  session.py
backend/server/tests/: test_api.py
backend/voice-agent/: .env.example  pyproject.toml
backend/voice-agent/.tests/: test_agent.py
backend/voice-agent/src/voice_agent/: agent.py  config.py  config_loader.py  database.py  menu_client.py  models.py  order.py
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/admin/: AdminLayout.tsx
client/src/admin/pages/: AgentConfigEditPage.tsx  AgentConfigsPage.tsx  BranchesPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  ListenInPage.tsx  MenuPage.tsx  ParserConfigPage.tsx  UsersPage.tsx
client/src/api/: client.ts  hooks.ts  types.ts
client/src/components/: AsyncState.tsx  NumberOrNull.tsx  PageHeader.tsx  TriStateSelect.tsx  confirmDelete.ts
client/src/components/auth/: AuthContext.tsx  LoginPage.tsx  ProtectedRoute.tsx
client/src/customer/: CartPanel.tsx  CustomerPage.tsx  MenuPanel.tsx  Visualizers.tsx  useWakeWord.ts
client/src/lib/: agentConfigDefaults.ts  notify.ts  options.ts
