[project]
name = "server"
version = "0.1.0"
description = "Drive-thru admin API: menu, document parsing, agent/parser config"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.22",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "pypdf>=5.0.0",
    "psycopg[binary]>=3.2",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "livekit-api>=1.0",
    "boto3>=1.43.34",
]

[project.scripts]
server = "server.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
